packages/truffle/test/sources/migrations/error/migrations/8_js_error_sync.js
module.exports = function(deployer) {
  deployer.deploy(Hello);
};
